crates/rattler_build_recipe_generator/src/snapshots/rattler_build_recipe_generator__pypi__tests__flask_noarch_rendered.snap
---
source: crates/rattler_build_recipe_generator/src/pypi.rs
expression: post_process_markers(recipe.to_string())
---
schema_version: 1

context:
  version: "3.1.0"
  build_number: "0"

package:
  name: flask
  version: ${{ version }}

source:
  url: https://files.pythonhosted.org/packages/source/f/flask/flask-${{ version }}.tar.gz
  sha256: 5f873c5184c897c8d9d1b05df1e3d01b14910ce69607a117bd3277098a5836ac

build:
  number: ${{ build_number }}
  noarch: python
  script: ${{ PYTHON }} -m pip install .
  python:
    entry_points:
      - flask = flask.cli:main

requirements:
  host:
    - python >=3.9
    - flit_core<4
    - pip
  run:
    - python >=3.9
    - werkzeug >=3.1
    - jinja2 >=3.1.2
    - itsdangerous >=2.2
    - click >=8.1.3
    - blinker >=1.9
    # - importlib-metadata >=3.6 # python_version < "3.10"
    # - asgiref >=3.2 # extra == "async"
    # - python-dotenv # extra == "dotenv"

tests:
  - python:
      imports:
        - Flask
      pip_check: true

about:
  summary: A simple framework for building complex web applications.
  description: |-
    # Flask

    Flask is a lightweight [WSGI][] web application framework. It is designed
    to make getting started quick and easy, with the ability to scale up to
    complex applications. It began as a simple wrapper around [Werkzeug][]
    and [Jinja][], and has become one of the most popular Python web
    application frameworks.

    Flask offers suggestions, but doesn't enforce any dependencies or
    project layout. It is up to the developer to choose the tools and
    libraries they want to use. There are many extensions provided by the
    community that make adding new functionality easy.

    [WSGI]: https://wsgi.readthedocs.io/
    [Werkzeug]: https://werkzeug.palletsprojects.com/
    [Jinja]: https://jinja.palletsprojects.com/


    ## A Simple Example

    ```python
    # save this as app.py
    from flask import Flask

    app = Flask(__name__)

    @app.route("/")
    def hello():
        return "Hello, World!"
    ```

    ```
    $ flask run
      * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)
    ```


    ## Donate

    The Pallets organization develops and supports Flask and the libraries
    it uses. In order to grow the community of contributors and users, and
    allow the maintainers to devote more time to the projects, [please
    donate today][].

    [please donate today]: https://palletsprojects.com/donate
  # WARNING: The following PyPI classifier(s) are ambiguous (per PEP 639)
  # and may not map to the correct SPDX license. Please verify:
  #   - BSD License
  license: BSD-3-Clause
  documentation: https://flask.palletsprojects.com/
